--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
+    "@nuxtjs/color-mode": "^3.3.2",
     "eslint": "^8.57.0"
   }
 }
